test/tests/stages/18_structures/invalid_types/invalid_lvalues/assign_nested_non_lvalue.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: inner
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: x
            Int: 
          CMemberDeclaration: 
            TIdentifier: y
            Int: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: outer
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Structure: 
              TIdentifier: inner
              Bool: 0
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_struct
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CCompoundInit: 
                        List[2]: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                            None: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 3
                              None: 
                            None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: outer
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: result
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Structure: 
            TIdentifier: outer
            Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDot: 
                    TIdentifier: x
                    CDot: 
                      TIdentifier: b
                      CFunctionCall: 
                        TIdentifier: return_struct
                        List[0]: 
                        None: 
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
